Fixed issue with blog post listing overflow

--- a/assets/styles/content.less
+++ b/assets/styles/content.less
@@ -141,6 +141,10 @@ img {
 	}
 }
 
+.post__excerpt {
+	word-break: break-all;
+}
+
 
 /* Responsive overrides */
 @media (max-width: 767px) {
